--- a/Dockerfiles/Dockerfile.i386.alpine_latest
+++ b/Dockerfiles/Dockerfile.i386.alpine_latest
@@ -1,4 +1,4 @@
-FROM --platform=linux/386 alpine:latest
+FROM balena/386-balena-multibuild-scripts:latest
 
 COPY ./run-on-arch-install.sh /root/run-on-arch-install.sh
 RUN chmod +x /root/run-on-arch-install.sh && /root/run-on-arch-install.sh
