Revert "different dockerfile"
This reverts commit 114cc5834580a07ee5b23861d787a09fcd052749.

--- a/Dockerfiles/Dockerfile.i386.alpine_latest
+++ b/Dockerfiles/Dockerfile.i386.alpine_latest
@@ -1,4 +1,4 @@
-FROM balena/386-balena-multibuild-scripts:latest
+FROM --platform=linux/386 alpine:latest
 
 COPY ./run-on-arch-install.sh /root/run-on-arch-install.sh
 RUN chmod +x /root/run-on-arch-install.sh && /root/run-on-arch-install.sh
